--- a/src/app/components/customer/available-services/available-services.component.html
+++ b/src/app/components/customer/available-services/available-services.component.html
@@ -1,23 +1,98 @@
+<div class="select-container d-flex align-items-center w-75 mx-auto my-3">
+  <span class="input-group-text bg-white">
+    <i class="fa-solid fa-door-open filter-icon"></i>
+  </span>
+  <select
+    id="roomSelect"
+    [(ngModel)]="selectedRoomId"
+    (change)="onRoomSelectionChange()"
+    class="form-select custom-select"
+  >
+    <option [ngValue]="null" disabled selected>
+       {{ "--select-booked-room--" | translate }}
+    </option>
+    <option *ngFor="let room of userRooms" [ngValue]="room.id">
+      {{ "room.label" | translate }}  #{{ room.title }} - {{ room.hotel }} - {{ room.price }}$
+    </option>
+  </select>
+</div>
+
+<div class="d-flex justify-content-between mt-2 ms-5 me-5 align-items-center">
+  <div></div>
+  <div class="d-flex justify-content-center w-75">
+    <div class="input-group search-container">
+      <div class="align-self-center">
+        <span class="input-group-text align-self-center bg-white">
+          <i class="fa-solid fa-magnifying-glass filter-icon"></i>
+        </span>
+      </div>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="{{ 'service.search-placeholder' | translate }}"
+        [(ngModel)]="serviceSearchTerm"
+        (input)="filterServices()"
+      />
+    </div>
+
+    <div class="input-group sort-by-container ms-3">
+      <div class="align-self-center">
+        <span class="input-group-text align-self-center bg-white">
+          <i class="fa-solid fa-filter filter-icon"></i>
+        </span>
+      </div>
+
+      <select
+        id="sortSelect"
+        class="form-select"
+        [(ngModel)]="sortBy"
+        (ngModelChange)="onSortChange($event)"
+      >
+        <option value="">{{ 'service.sort-by' | translate }}</option>
+        <option value="title">{{ 'service.sort.title' | translate }}</option>
+        <option value="serviceType">{{ 'service.sort.type' | translate }}</option>
+        <option value="price">{{ 'service.sort.price' | translate }}</option>
+      </select>
+    </div>
+
+    <button
+      class="btn-outline border-0 p-1 ms-2"
+      type="button"
+      (click)="toggleSortDirection()"
+      title="Toggle sort direction"
+    >
+      <i
+        *ngIf="sortDirection === 'Ascending'"
+        class="bi bi-sort-down-alt h4"
+      ></i>
+      <i
+        *ngIf="sortDirection === 'Descending'"
+        class="bi bi-sort-up-alt h4"
+      ></i>
+    </button>
+  </div>
+</div>
+
 <div
   class="services-container"
-  *ngIf="filteredServices.length > 0; else noServices"
+  *ngIf="filteredServices && filteredServices.length > 0; else noServices"
 >
   <div class="service-card" *ngFor="let service of filteredServices">
     <h3>{{ service.title }}</h3>
-    <p><strong>Details:</strong> {{ service.details }}</p>
-    <p><strong>Price:</strong> ${{ service.price }}</p>
+    <p><strong>{{ 'service.details' | translate }}:</strong> {{ service.details }}</p>
+    <p><strong>{{ 'service.price' | translate }}:</strong> ${{ service.price }}</p>
     <img
       *ngIf="service.imageUrl"
       [src]="service.imageUrl"
-      alt="Service Image"
+      alt="{{ 'service.image-alt' | translate }}"
       class="service-img mb-2"
     />
 
     <div class="employee-info">
-      <h4>Provided by:</h4>
-      <p><strong>Name:</strong> {{ service.employee.name }}</p>
-      <p><strong>Email:</strong> {{ service.employee.email }}</p>
-      <p><strong>Phone:</strong> {{ service.employee.phone }}</p>
+      <h4>{{ 'service.provided-by' | translate }}:</h4>
+      <p><strong>{{ 'service.employee.name' | translate }}:</strong> {{ service.employee.name }}</p>
+      <p><strong>{{ 'service.employee.email' | translate }}:</strong> {{ service.employee.email }}</p>
+      <p><strong>{{ 'service.employee.phone' | translate }}:</strong> {{ service.employee.phone }}</p>
     </div>
 
     <button
