Fix HomeRedirect Navigation

--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-container">
     <a
       class="logo"
-      [routerLink]="''"
+      [routerLink]="['home-redirect']"
       routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
     >
