--- a/src/app/pages/admin/manage-users/manage-users.component.html
+++ b/src/app/pages/admin/manage-users/manage-users.component.html
@@ -53,7 +53,7 @@
         <td>
           <button
             class="details action-btn"
-            [routerLink]="['/user/', user.id]"
+            [routerLink]="['/admin/user-details/', user.id]"
             routerLinkActive="router-link-active"
           >
             <i
