--- a/src/app/pages/customer/available-services/available-services.component.scss
+++ b/src/app/pages/customer/available-services/available-services.component.scss
@@ -139,6 +139,12 @@
   }
 }
 
+.no-data {
+  width: 100%;
+  margin-top: 15%;
+  text-align: center;
+}
+
 // ------------------------ Search Bar and Sort By Styling ------------------------
 
 .input-group-text {
