--- a/src/app/shared/components/room/rooms/rooms.component.html
+++ b/src/app/shared/components/room/rooms/rooms.component.html
@@ -149,7 +149,7 @@
   </div>
   } } @else{
   <h3 class="text-center mt-5">
-    {{ "room.couldnt-find-a-room" | translate }}
+    {{ "shared.filter.could-not-find-what-you-are-searching-for" | translate }}
   </h3>
   } }@else{
   <h3 class="text-center mt-5">
