--- a/src/app/pages/customer/my-reservations/my-reservations.component.html
+++ b/src/app/pages/customer/my-reservations/my-reservations.component.html
@@ -58,6 +58,8 @@
             >
               {{ "reservation.view-services" | translate }}
             </a>
+                   
+
             <!-- رابط الانتقال إلى صفحة تفاصيل الغرفة -->
             <a
               [routerLink]="['/room-details', reservation.room.id]"
@@ -66,6 +68,8 @@
             >
               🔗 {{ "reservation.view-room-details" | translate }}
             </a>
+
+            <button (click)="goToCheckout(reservation.room.id)" pButton>Checkout</button>
           </div>
         </div>
       </div>
