--- a/src/app/pages/customer/my-reservations/my-reservations.component.scss
+++ b/src/app/pages/customer/my-reservations/my-reservations.component.scss
@@ -68,7 +68,7 @@
     .btn-danger {
       margin-top: 1rem;
     }
-    .room-details-link{
+    .room-details-link {
       display: block;
       margin-top: 1rem;
       font-weight: 500;
@@ -98,4 +98,9 @@
 .alert {
   font-size: 1.1rem;
   padding: 1rem;
+}
+.is-checked-out {
+  color: gray;
+  opacity: 0.7;
+  filter: grayscale(100%);
 }
