Add Styling And Responsive Design

--- a/src/app/pages/customer/checkout/checkout.component.html
+++ b/src/app/pages/customer/checkout/checkout.component.html
@@ -1,22 +1,52 @@
-<h2>Checkout Summary</h2>
+<h2 class="w-100 text-center p-3 mt-5 mb-3">Checkout Summary</h2>
+<div class="container d-flex flex-column">
+  <h3 class="ms-5 mb-3">Room</h3>
+  <div class="d-flex justify-content-around ms-5 me-5">
+    <img
+      [src]="reservation?.room?.imagesUrl[0]"
+      class="room-img align-self-center rounded-4 mt-2 mb-2"
+    />
+    <div class="d-flex flex-column justify-content-center room-info">
+      <p><strong>Name:</strong> {{ reservation?.room?.title }}</p>
+      <p><strong>Price per night:</strong> ${{ reservation?.room?.price }}</p>
+      <p><strong>Nights Stayed:</strong> {{ nightsStayed }}</p>
+      <p class="room-price mb-0">
+        <strong>Total Room Cost:</strong> ${{ roomCost }}
+      </p>
+    </div>
+  </div>
+  <hr />
+  <h3 class="ms-5 mb-3">Services Requested</h3>
+  <div class="d-flex justify-content-around ms-5 me-5 services-container">
+    <ul *ngIf="services.length > 0" class="m-0 service-info">
+      <li *ngFor="let service of services">
+        @if(service.serviceType == "Cleaning"){
+        <i class="fa-solid fa-broom me-2" style="color: #ad926b"></i>
+        } @else if (service.serviceType == "Dining") {
+        <i class="fa-solid fa-utensils me-2" style="color: #ad926b"></i>
+        }@else if (service.serviceType == "Maintenance") {
+        <i class="fa-solid fa-toolbox me-2" style="color: #ad926b"></i>
+        }{{ service.title }} - ${{ service.price }}
+      </li>
+    </ul>
+    <p *ngIf="services.length === 0">None</p>
+    <div class="d-flex align-items-center service-price-container">
+      <p class="align-middle mb-0 service-price">
+        <strong>Total Services Cost:</strong> ${{ servicesTotal }}
+      </p>
+    </div>
+  </div>
+  <hr />
+  <div
+    class="d-flex justify-content-between w-100 checkout-footer align-items-center"
+  >
+    <div class="ms-5 me-5"></div>
 
-<p><strong>Room:</strong> {{ reservation?.room?.title }}</p>
-<p><strong>Price per Night:</strong> {{ reservation?.room?.price }} JOD</p>
-<p><strong>Nights Stayed:</strong> {{ nightsStayed }}</p>
-<p><strong>Room Cost:</strong> {{ roomCost }} JOD</p>
+    <button class="btn btn-primary p-2 ps-4 pe-4 m-0" (click)="payNow()">
+      Checkout
+    </button>
 
-<hr />
-
-<h3>Approved Services</h3>
-<ul *ngIf="services.length > 0">
-  <li *ngFor="let s of services">{{ s.title }} - {{ s.price }} JOD</li>
-</ul>
-<p *ngIf="services.length === 0">No approved services.</p>
-<p><strong>Services Cost:</strong> {{ servicesTotal }} JOD</p>
-
-<hr />
-
-<h2>Total Amount: {{ totalCost }} JOD</h2>
-
-<button (click)="payNow()">Checkout</button>
+    <h3 class="text-center m-0 mb-3">Total: ${{ totalCost }}</h3>
+  </div>
+</div>
 <p-toast></p-toast>
