--- a/src/app/pages/employee/requests/requests.component.html
+++ b/src/app/pages/employee/requests/requests.component.html
@@ -1,27 +1,8 @@
 <div class="page">
   @if(pendingServicesRequests.length >0){
-  <div style="display: flex; align-items: center; gap: 8px">
+  <div class="d-flex">
     <h1 class="m-4">{{ "service.pending-requests" | translate }}</h1>
-    <div style="position: relative; width: 1.5em; height: 1.5em">
-      <i
-        class="title-icon fa-solid fa-ellipsis fa-lg"
-        style="
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        "
-      ></i>
-      <i
-        class="title-icon fa-regular fa-circle fa-2xl"
-        style="
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        "
-      ></i>
-    </div>
+      <i class="title-icon fa-solid fa-clock fa-xl align-self-center"></i>
   </div>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
