Add clearSearchInput in Rooms, Services, And AvailableServices Components

--- a/src/app/pages/customer/available-services/available-services.component.scss
+++ b/src/app/pages/customer/available-services/available-services.component.scss
@@ -147,6 +147,11 @@
 
 // ------------------------ Search Bar and Sort By Styling ------------------------
 
+.form-control {
+  position: relative;
+  z-index: 1 !important;
+}
+
 .input-group-text {
   margin: 10px 5px;
   padding: 11px;
@@ -154,6 +159,15 @@
   width: 100%;
   border: 2px $color-dark-brown solid;
   border-right: none;
+}
+
+.input-right {
+  margin: 10px 0px;
+  border: 2px $color-dark-brown solid;
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+  position: relative;
+  z-index: 2;
 }
 
 input,
@@ -165,6 +179,11 @@ select {
   border-radius: 5px;
   width: 100%;
   border-left: none;
+}
+
+input {
+  margin: 10px 0px;
+  border-right: none;
 }
 
 .search-container {
@@ -185,11 +204,22 @@ select {
   border-left: none;
 }
 
+.form-control:focus {
+  border-right: none;
+}
+
 .input-group:has(.form-control:focus) .input-group-text,
 .input-group:has(.form-select:focus) .input-group-text {
   box-shadow: 3px 3px 5px $color-caramel !important;
   border: 3px $color-dark-brown solid;
 }
+
+.input-group:has(.form-control:focus) .input-right {
+  box-shadow: 3px 3px 5px $color-caramel !important;
+  border: 3px $color-dark-brown solid;
+  border-left: none;
+}
+
 /* RTL-specific overrides */
 :dir(rtl) {
   .input-group {
@@ -202,11 +232,22 @@ select {
     border-radius: 0 5px 5px 0;
   }
 
+  .input-right {
+    margin: 10px 0px;
+    border: 2px $color-dark-brown solid;
+    border-right: none;
+    border-radius: 5px 0 0 5px;
+  }
+
   input,
   select {
     border-left: 2px $color-dark-brown solid;
     border-right: none;
     border-radius: 5px 0 0 5px;
+  }
+  
+  input {
+    border-left: none;
   }
 
   .form-control:focus,
@@ -216,11 +257,21 @@ select {
     border-right: none !important;
   }
 
+  .form-control:focus {
+    border-left: none;
+  }
+
   .input-group:has(.form-control:focus) .input-group-text,
   .input-group:has(.form-select:focus) .input-group-text {
     box-shadow: -3px 3px 5px $color-caramel !important;
     border: 3px $color-dark-brown solid;
     border-left: none;
+  }
+
+  .input-group:has(.form-control:focus) .input-right {
+    box-shadow: -3px 3px 5px $color-caramel !important;
+    border: 3px $color-dark-brown solid;
+    border-right: none;
   }
 
   // move select arrow to the left
