--- a/src/app/pages/customer/available-services/available-services.component.html
+++ b/src/app/pages/customer/available-services/available-services.component.html
@@ -13,6 +13,15 @@
         [(ngModel)]="serviceSearchTerm"
         (input)="filterServices()"
       />
+      <div class="align-self-center">
+        <span class="input-group-text input-right align-self-center bg-white">
+          <i
+            role="button"
+            (click)="clearSearchInput()"
+            class="fa-solid fa-xmark"
+          ></i>
+        </span>
+      </div>
     </div>
     <div class="input-group sort-by-container ms-3 w-50">
       <div class="align-self-center">
